--- a/frontend/javascripts/app/views/experiment/amplification-chart.html
+++ b/frontend/javascripts/app/views/experiment/amplification-chart.html
@@ -183,6 +183,7 @@ limitations under the License.
           <chart-well-switch 
             style="position: absolute; height: 100%;" 
             ng-model="wellButtons" 
+            is-dual="is_dual_channel"
             color-by="color_by" 
             chart-type="amplification"
             samples="samples"
