--- a/frontend/stylesheets/directives/chart-well-switch.css.scss
+++ b/frontend/stylesheets/directives/chart-well-switch.css.scss
@@ -40,7 +40,7 @@
     position: relative;
 
     &.selected {
-      background-color: #a2dded;
+      background-color: #F1F7F9;
       .ct-cq-container {
         // background-color: white;
       }
