fix target box scroll bar in curve page

--- a/frontend/javascripts/app/views/experiment/amplification-chart.html
+++ b/frontend/javascripts/app/views/experiment/amplification-chart.html
@@ -159,11 +159,11 @@ limitations under the License.
                       {{label_well}}{{label_sample ? ", " : ""}}{{label_sample}}
                     </div> -->
                 </div>
-                <div class="targets-set" style="padding: 0;">
+                <div class="targets-set">
                   <div class="header B1-M-Amplification" style="background-color: #666;min-height: 35px; color:white; padding: 10px;">
                     Targets
                   </div>
-                  <div style="padding: 5px 10px;overflow: auto;height: calc(100% - 38px);">                    
+                  <div class="target-box">                    
                     <table class="targets-table">
                       <tr ng-repeat="target in targetsSet">
                         <td style="padding-top: 5px; padding-bottom: 5px; color: black;">
