--- a/frontend/stylesheets/amplification-chart.css.scss
+++ b/frontend/stylesheets/amplification-chart.css.scss
@@ -306,10 +306,16 @@
         background-color: #fff;
         //margin-left: 20px;
         // margin-bottom: -66px;
-        padding: 10px;
+        padding: 0px;
         display: block;
         width: 100%;
         height: 215px;
+
+        .target-box{
+          padding: 5px 10px;
+          overflow: auto;
+          height: calc(100% - 38px);
+        }
 
         .targets-table {
           width: 100%;
