improve amplification curve page

--- a/frontend/javascripts/app/views/directives/chart-well-switch.html
+++ b/frontend/javascripts/app/views/directives/chart-well-switch.html
@@ -54,8 +54,8 @@
               </div>
             </div>
             <div class="ct-cq-container">
-              <div> C<small>q</small> <strong class="value">{{ displayCt(well.ct[0]) }}</strong> </div>
-              <div> C<small>q</small> <strong class="value">{{ displayCt(well.ct[1]) }}</strong> </div>
+              <div> C<sub>q</sub> <strong class="value">{{ displayCt(well.ct[0]) }}</strong> </div>
+              <div> C<sub>q</sub> <strong class="value">{{ displayCt(well.ct[1]) }}</strong> </div>
             </div>
           </div>
         </td>
