--- a/frontend/stylesheets/fonts.css.scss
+++ b/frontend/stylesheets/fonts.css.scss
@@ -217,6 +217,13 @@ H3-Amplification {
   line-height: 15px;
 }
 
+.G1M {
+  font-family: "dinot-medium";
+  font-size: 12px;
+  font-weight: normal;
+  line-height: 15px;
+}
+
 .G1 {
   font-family: "dinot-regular";
   font-size: 12px;
