--- a/frontend/stylesheets/amplification-chart.css.scss
+++ b/frontend/stylesheets/amplification-chart.css.scss
@@ -243,6 +243,68 @@
       float: left;      
       
       // height: 100%;
+
+      .chart-wrapper{
+        width:100%; 
+        height: 100%; 
+        position: relative;
+
+        .vertical-hr{
+          position: absolute;
+          width: 1px;
+          border-left: 1px solid #888;
+          height: 100%;
+          left: 60px;
+          top: 0px;
+        }
+
+        .horizontal-hr{          
+          position: absolute;
+          height: 0px;
+          border-bottom: 1px solid #888;
+          width: 100%;
+          bottom: 59px;
+        }
+
+        .zoom-box{
+          position: absolute;
+          bottom: 0px;
+          width: 60px;
+          height: 60px;
+          .zoom-button-box{
+            width: 100%;
+            height: 100%;
+            position: absolute;
+            .zoom-button{
+              font-size: 20px;
+              position: absolute;
+              width: 30px;
+              height: 35px;
+              border-radius: 50%;
+              outline: none;
+              color: #000;
+              &.button-plus{
+                top: 2px;
+                text-align: right;
+              }
+
+              &.button-minus{
+                bottom: 2px;
+                right: 1px;
+                text-align: left;
+              }
+            }
+          }
+
+          .zoom-button-divider{
+            position: absolute;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            padding: 10px;
+          }
+        }
+      }
     }
     .additional-info {
       // position: relative;
