add drop shadow

--- a/frontend/javascripts/app/views/experiment/amplification-chart.html
+++ b/frontend/javascripts/app/views/experiment/amplification-chart.html
@@ -127,7 +127,7 @@ limitations under the License.
               </div> -->
             </div>
             <div class="additional-info" style="min-width:160px;">
-                <div style="padding: 0; background: transparent;">
+                <div class="selection-set">
                     <div class="parameters">
                       <div class="header B1-M-Amplification" ng-style="bgcolor_target" style="min-height: 35px; color:white;">
                         <!-- Target: -->
