--- a/frontend/stylesheets/amplification-chart.css.scss
+++ b/frontend/stylesheets/amplification-chart.css.scss
@@ -229,7 +229,7 @@
     }
   }
   .curve-body {
-    background-color: #eee;
+    background-color: transparent;
     padding: 10px;
 
     display:flex;
@@ -240,7 +240,8 @@
       padding: 10px;
       // display: inline-block;
       // width: 85%;
-      float: left;      
+      float: left;
+      box-shadow: 0 2px 3px rgba(0, 0, 0, 0.25);
       
       // height: 100%;
 
@@ -326,6 +327,12 @@
         background-color: #fff;
         padding: 0px;
       }
+
+      .selection-set{
+        padding: 0; 
+        background: transparent;
+        box-shadow: 0 2px 3px rgba(0, 0, 0, 0.25);
+      }
       .parameters {
         padding: 0px;
         
@@ -352,7 +359,7 @@
       .info {
         color: #595959;
         // background-color: #000;
-        margin-top: 2px;
+        margin-top: 1px;
       }
       
       .info1 {
@@ -372,6 +379,7 @@
         display: block;
         width: 100%;
         height: 215px;
+        box-shadow: 0 2px 3px rgba(0, 0, 0, 0.25);
 
         .target-box{
           padding: 5px 10px;
