--- a/frontend/stylesheets/directives/chart-well-switch.css.scss
+++ b/frontend/stylesheets/directives/chart-well-switch.css.scss
@@ -8,6 +8,8 @@
 
   table {    
     border-right: 1px solid #c5c5c5;
+    box-shadow: 0 2px 3px rgba(0, 0, 0, 0.25);
+    background: #fff;
   }
 
   th, td{
@@ -58,7 +60,7 @@
         top: -5px;
         left: -5px;
         right: -5px;        
-        box-shadow: 0px 0px 5px #000;
+        box-shadow: 0px 2px 3px rgba(0, 0, 0, .25);
         font-weight: bold;
       }
       .ct-cq-container {
