--- a/frontend/stylesheets/results-charts.scss
+++ b/frontend/stylesheets/results-charts.scss
@@ -4,6 +4,8 @@
     padding-bottom: 0px;
     margin-left: 0px;
     margin-right: 0px;
+    box-shadow: 0 2px 3px rgba(0, 0, 0, 0.25);
+
     .row {
       margin-top: 0;
       margin-bottom: 0;
